<resources>
    <string name="app_name">Application Loading Status</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="button_normal_text">Start Download</string>
    <string name="button_downloading_text">Downloading project...</string>
    <string name="title_activity_detail">Detail Activity</string>

    <!-- Main Activity -->
    <!-- Radio Group -->
    <string name="download_glide_repo">Download Glide Project</string>
    <string name="download_advanced_programming_repo">Download Android Advanced Programming Starter</string>
    <string name="download_retrofit_repo">Download Retrofit Project</string>
    <string name="download_image_description">Static Download Image</string>

    <string name="select_radio">Select a project to download</string>

    <!-- Notification strings -->
    <string name="notification_title">Download status</string>
    <string name="notification_message">Download request has completed</string>
    <string name="notification_action_button">Tap for status</string>

    <!-- Project download message strings -->
    <string name="download_success_message">Successful</string>
    <string name="download_failed_message">Failed</string>
    <string name="download_error_message">Error</string>

    <!-- Project Repo Display Name -->
    <string name="glide_project_name">Glide Project</string>
    <string name="android_advanced_programming_project_name">Android Advanced Programming Project</string>
    <string name="retrofit_project_name">Retrofit Project</string>
    <string name="unknown_project_name">UNKNOWN_PROJECT</string>
    <string name="download_project_button_description">Download Project Button</string>
    <string name="project_name_label">Project Name:</string>
    <string name="project_download_status_label">Download Status:</string>
    <string name="ok_button_text">OK</string>

</resources>
