<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.main.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/download_image_description"
            app:srcCompat="@drawable/file_download_24dp" />

        <RadioGroup
            android:id="@+id/download_file_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp">

            <RadioButton
                android:id="@+id/radio_button_one"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_48dp"
                android:padding="@dimen/padding_8dp"
                android:text="@string/download_glide_repo" />

            <RadioButton
                android:id="@+id/radio_button_two"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_48dp"
                android:padding="@dimen/padding_8dp"
                android:text="@string/download_advanced_programming_repo" />

            <RadioButton
                android:id="@+id/radio_button_three"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_48dp"
                android:layout_marginBottom="@dimen/margin_24dp"
                android:padding="@dimen/padding_8dp"
                android:text="@string/download_retrofit_repo" />
        </RadioGroup>

    </LinearLayout>

    <com.udacity.LoadingButton
        android:id="@+id/custom_loading_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/download_project_button_description"
        app:backgroundColor="@color/primary_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>